fix sticky overflow issue

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,3 +1,5 @@
+@import '../../style/variables.scss';
+
 .about {
   display: flex;
   flex-direction: column;
@@ -11,6 +13,10 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    @media screen and (max-width: #{$bp-small}) {
+      font-size: 3rem;
+    }
   }
 
   .text {
