--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,9 +1,11 @@
+@import '../../style/variables.scss';
+
 .projects {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  // overflow: hidden;
 
   .video-track {
     margin-top: -56vh;
@@ -64,34 +66,61 @@
       flex: 1;
     }
 
-    input {
-      font-size: 1.2rem;
-      line-height: 2rem;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 1em;
-      border-top-left-radius: 1em;
-      border: 1px solid #4e2c6e;
-      padding: 0 12px;
-      box-sizing: border-box;
-      height: 2rem;
-      outline: none;
-    }
+    .subscribe-container {
+      display: flex;
+      justify-content: center;
+      margin-top: 0.4rem;
+      flex-direction: column;
+      align-items: center;
 
-    button {
-      font-size: 1em;
-      border-radius: 1em;
-      border: 0;
-      padding: 0 12px;
-      border-top-right-radius: 1em;
-      border-bottom-right-radius: 1em;
-      border-bottom-left-radius: 0;
-      border-top-left-radius: 0;
-      background-color: #4e2c6e;
-      border: 1px solid #4e2c6e;
-      color: #fff;
-      box-sizing: border-box;
-      height: 2rem;
+      input {
+        font-size: 1.2rem;
+        line-height: 2rem;
+        border-top-right-radius: 1em;
+        border-bottom-right-radius: 1em;
+        border-bottom-left-radius: 1em;
+        border-top-left-radius: 1em;
+        border: 1px solid #4e2c6e;
+        box-sizing: border-box;
+        height: 2rem;
+        outline: none;
+        padding: 0;
+      }
+
+      button {
+        font-size: 1em;
+        border-radius: 1em;
+        border: 0;
+        padding: 0 12px;
+        border-top-right-radius: 1em;
+        border-bottom-right-radius: 1em;
+        border-bottom-left-radius: 1em;
+        border-top-left-radius: 1em;
+        background-color: #4e2c6e;
+        border: 1px solid #4e2c6e;
+        color: #fff;
+        box-sizing: border-box;
+        height: 2rem;
+        margin-top: 0.2rem;
+      }
+
+      @media screen and (min-width: #{$bp-small}) {
+        flex-direction: row;
+
+        input {
+          border-top-right-radius: 0;
+          border-bottom-right-radius: 0;
+          padding: 0 12px;
+        }
+
+        button {
+          border-bottom-left-radius: 0;
+          border-top-left-radius: 0;
+        }
+      }
+
+      // @media screen and (min-width: #{$bp-large}) {
+      // }
     }
   }
 
@@ -102,7 +131,7 @@
 
   .photo {
     img {
-      width: 400px;
+      width: 100px;
       border-radius: 5%;
       border-color: #999999;
       border-width: 1px;
@@ -127,6 +156,10 @@
       justify-content: center;
       align-items: center;
       text-align: center;
+
+      @media screen and (max-width: #{$bp-small}) {
+        font-size: 3rem;
+      }
     }
   }
 }
